# core-workflow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  blurb  cherry_picker.py  o_canada.txt  readme.rst  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: blurb.md  core-workflow.md  labels.md  proofreader_membership.md  triage_membership.md
.github/workflows/: tests.yml
blurb/: LICENSE.txt  README.md  README.rst  __main__.py  blurb  blurb.py  flit.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
blurb/tests/: test_blurb.py
blurb/tests/fail/: bpo-.rst  dash-space.rst  double-metadata.rst  invalid-gh-number.rst  invalid-section.rst  issue-number.rst  no-colon.rst  no-gh-number.rst  no-section.rst  small-gh-number.rst
blurb/tests/pass/: basic.rst  bpo-in-metadata.rst.res  case-insensitive.rst  case-insensitive.rst.res  no-break-long-words.rst  no-break-long-words.rst.res  no-break-on-hyphens.rst  no-break-on-hyphens.rst.res
cherry_picker/: MANIFEST.in  __main__.py  cherry_picker.py  flit.ini  pyproject.toml  readme.rst  requirements.txt  setup.py  test.py
cherry_picker/cherry_picker/: __init__.py  __main__.py  cherry_picker.py  requirements.txt  test.py
https/github.com/therealcurlsport/cpython/: pulse
merge-conflicts/: requester.py
merge_conflict_labeler/merge_conflicts/: __init__.py  __main__.py  merge_conflicts.py  utils.py
merge_conflict_labeler/tests/: test_label_conflicting_prs.py  test_utils.py  testing_utils.py
utils/: promote_to_triager.py  triage_team.py
