[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "blurb"
author = "Larry Hastings"
author-email = "larry@hastings.org"
maintainer = "Python Core Developers"
maintainer-email = "core-workflow@mail.python.org"
home-page = "https://github.com/python/core-workflow/tree/main/blurb"
requires-python = ">=3.8"
description-file = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.flit.scripts]
blurb = "blurb:main"
