[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=2",
]

[project]
name = "blurb"
description = "Command-line tool to manage CPython Misc/NEWS.d entries."
readme = "README.rst"
maintainers = [{name = "Python Core Developers", email="core-workflow@mail.python.org"}]
authors = [{ name="Larry Hastings", email="larry@hastings.org"}]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = [
  "version",
]
[project.optional-dependencies]
tests = [
  "pyfakefs",
  "pytest",
  "pytest-cov",
]
[project.urls]
Changelog = "https://github.com/python/core-workflow/tree/main/blurb#changelog"
Homepage = "https://github.com/python/core-workflow/tree/main/blurb"
Source = "https://github.com/python/core-workflow/tree/main/blurb"
[project.scripts]
blurb = "blurb:main"
